ergo/script/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: admin-api
  name: admin-api
  namespace: 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app:dmin-api
    spec:
      containers:
      - image: registry.cn-shanghai.aliyuncs.com/xptools/gozero_admin_api:v1.0.1
        name: admin-api
        resources: {}
      imagePullSecrets:
      - name: docker-registry
status: {}
